# zettel_cli

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.sh
src/: main.rs
templates/: permanent-note.md
templates/directories/: 000-inbox.md  100-permanent.md  200-literature.md  300-projects.md  400-maps.md
